--- a/public/css/my-style.css
+++ b/public/css/my-style.css
@@ -16,6 +16,10 @@
     height: calc(100vh - 4rem);
 }
 
+.spa-2 {
+    height: calc(100vh - 16rem);
+}
+
 .fade-out {
     transition: opacity 1s ease-in-out; /* Define the transition effect */
     opacity: 1; /* Initially set opacity to fully visible */
