--- a/public/css/style.css
+++ b/public/css/style.css
@@ -636,6 +636,10 @@ video {
   top: 0.75rem;
 }
 
+.right-1\/2 {
+  right: 50%;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -654,6 +658,10 @@ video {
 
 .col-span-3 {
   grid-column: span 3 / span 3;
+}
+
+.m-8 {
+  margin: 2rem;
 }
 
 .-mx-1 {
@@ -737,10 +745,6 @@ video {
   margin-top: 0.25rem;
 }
 
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
 .mt-20 {
   margin-top: 5rem;
 }
@@ -751,6 +755,34 @@ video {
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
+}
+
+.ml-8 {
+  margin-left: 2rem;
+}
+
+.mt-16 {
+  margin-top: 4rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
+}
+
+.ml-5 {
+  margin-left: 1.25rem;
+}
+
+.ml-56 {
+  margin-left: 14rem;
 }
 
 .block {
@@ -1652,6 +1684,11 @@ video {
   .dark\:hover\:bg-gray-700:hover {
     --tw-bg-opacity: 1;
     background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+  }
+
+  .dark\:hover\:bg-\[\#434C5E\]:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(67 76 94 / var(--tw-bg-opacity));
   }
 
   .dark\:hover\:text-white:hover {
